--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Chandra CV Resume</title>
+	<title>Chandra | Personal Page</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="" />
 	<meta name="keywords" content="" />
@@ -84,7 +84,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 					<li><a href="#"><i class="icon-facebook2"></i></a></li>
 					<li><a href="#"><i class="icon-twitter2"></i></a></li>
 					<li><a href="#"><i class="icon-instagram"></i></a></li>
-					<li><a href="#"><i class="icon-linkedin2"></i></a></li>
+					<li><a href="https://www.linkedin.com/in/chandra-putra-os/"><i class="icon-linkedin2"></i></a></li>
 				</ul>
 			</div>
 
@@ -102,8 +102,8 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 					   				<div class="slider-text-inner js-fullheight">
 					   					<div class="desc">
 						   					<h1 color="white">Hi! <br>I'm Chandra</h1>
-						   					<h2>This is my personal CV website <a href="https://colorlib.com/" target="_blank">colorlib.com</a></h2>
-												<p><a class="btn btn-primary btn-learn">Download CV <i class="icon-download4"></i></a></p>
+						   					<h2>This is my personal website <a href="https://chandraputraos.github.io/cvprofile/" target="_blank"><b>CV Profile</b></a></h2>
+												<p><a href="/images/Chandra_Putra(2019).pdf" download="CV Chandra" class="btn btn-primary btn-learn">Download CV <i class="icon-download4"></i></a></p>
 											</div>
 					   				</div>
 					   			</div>
@@ -118,8 +118,8 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 					   				<div class="slider-text-inner">
 					   					<div class="desc">
 						   					<h1>I am <br>a Software Engineer</h1>
-												<h2>Recently work as Software Engineer Operations in <a href="https://TechMahindra.com/" target="_blank">PT Tech Mahindra </a></h2>
-												<p><a class="btn btn-primary btn-learn">View Portfolio <i class="icon-briefcase3"></i></a></p>
+												<h2>Recently work as Software Engineer Operations in <a href="https://TechMahindra.com/" target="_blank"><b>PT Tech Mahindra </b></a></h2>
+												
 											</div>
 					   				</div>
 					   			</div>
@@ -170,7 +170,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 
 
 
-		
+
 
 			<section class="colorlib-skills" data-section="skills">
 				<div class="colorlib-narrow-content">
