--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 					   					<div class="desc">
 						   					<h1 color="white">Hi! <br>I'm Chandra</h1>
 						   					<h2>This is my personal website <a href="https://chandraputraos.github.io/cvprofile/" target="_blank"><b>CV Profile</b></a></h2>
-												<p><a href="/images/Chandra_Putra(2019).pdf" download="CV Chandra" class="btn btn-primary btn-learn">Download CV <i class="icon-download4"></i></a></p>
+												<p><a href="https://github.com/chandraputraos/cvprofile/blob/master/images/Chandra_Putra(2019).pdf" download="CV Chandra" class="btn btn-primary btn-learn">Download CV <i class="icon-download4"></i></a></p>
 											</div>
 					   				</div>
 					   			</div>
@@ -119,7 +119,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 					   					<div class="desc">
 						   					<h1>I am <br>a Software Engineer</h1>
 												<h2>Recently work as Software Engineer Operations in <a href="https://TechMahindra.com/" target="_blank"><b>PT Tech Mahindra </b></a></h2>
-												
+
 											</div>
 					   				</div>
 					   			</div>
