--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 					   				<div class="slider-text-inner">
 					   					<div class="desc">
 						   					<h1>I am <br>a Software Engineer</h1>
-												<h2>Recently work as Software Engineer Operations in <a href="https://TechMahindra.com/" target="_blank"><b>PT Tech Mahindra </b></a></h2>
+												<h2>Recently work as Technical Recovery Lead in <a href="https://TechMahindra.com/" target="_blank"><b>Home Credit Indonesia </b></a></h2>
 
 											</div>
 					   				</div>
@@ -143,7 +143,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 									<div class="about-desc">
 										<span class="heading-meta">About Me</span>
 										<h2 class="colorlib-heading">Who Am I?</h2>
-										<p><strong>Hi I'm Chandra Putra O S</strong> Experienced Information Technology Operations Specialist with a demonstrated history of working in the Telecommunications Industry, for now working on Tech Mahindra in site Tri ( 3 )Telecom and previously worked at Smartfren Telecom. Skilled in PHP as Back End, Javascript  as Front End , SQL, RESTful API and Content Management Systems (CMS). Strong information technology professional with a Bachelor's degree focused in Electrical Engineering from Universitas Sumatera Utara (USU). </p>
+										<p><strong>Hi I'm Chandra Putra O S</strong> Experienced Information Technology Operations Specialist with a demonstrated history of working in the Finance Tech & Telecommunications Industry, for now working on Home Credit Indonesia and previously worked at Tech Mahindta ( 3 Telecom ) Smartfren Telecom. Skilled in Reporting , System Analyst , Data Analyst , PHP as Back End, Javascript  as Front End , SQL, RESTful API and Content Management Systems (CMS). Strong information technology professional with a Bachelor's degree focused in Electrical Engineering from Universitas Sumatera Utara (USU). </p>
 									</div>
 								</div>
 							</div>
