--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 						</div>
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
 							<div class="progress-wrap">
-								<h3>PHP</h3>
+								<h3>Laravel</h3>
 								<div class="progress">
 								 	<div class="progress-bar color-1" role="progressbar" aria-valuenow="75"
 								  	aria-valuemin="0" aria-valuemax="100" style="width:85%">
@@ -223,7 +223,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 						</div>
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
 							<div class="progress-wrap">
-								<h3>RESTful API</h3>
+								<h3>API</h3>
 								<div class="progress">
 								 	<div class="progress-bar color-4" role="progressbar" aria-valuenow="90"
 								  	aria-valuemin="0" aria-valuemax="100" style="width:80%">
@@ -237,7 +237,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 								<h3>SQL</h3>
 								<div class="progress">
 								 	<div class="progress-bar color-3" role="progressbar" aria-valuenow="70"
-								  	aria-valuemin="0" aria-valuemax="100" style="width:70%">
+								  	aria-valuemin="0" aria-valuemax="100" style="width:75%">
 								    <span>70%</span>
 								  	</div>
 								</div>
@@ -245,7 +245,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 						</div>
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
 							<div class="progress-wrap">
-								<h3>HTML</h3>
+								<h3>System Analyst</h3>
 								<div class="progress">
 								 	<div class="progress-bar color-6" role="progressbar" aria-valuenow="80"
 								  	aria-valuemin="0" aria-valuemax="100" style="width:85%">
@@ -256,7 +256,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 						</div>
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
 							<div class="progress-wrap">
-								<h3>CSS3</h3>
+								<h3>Data Analyst</h3>
 								<div class="progress">
 								 	<div class="progress-bar color-7" role="progressbar" aria-valuenow="80"
 								  	aria-valuemin="0" aria-valuemax="100" style="width:70%">
@@ -270,7 +270,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 								<h3>Unix / Linux </h3>
 								<div class="progress">
 								 	<div class="progress-bar color-8" role="progressbar" aria-valuenow="80"
-								  	aria-valuemin="0" aria-valuemax="100" style="width:60%">
+								  	aria-valuemin="0" aria-valuemax="100" style="width:80%">
 								    <span>60%</span>
 								  	</div>
 								</div>
@@ -381,7 +381,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 					               </div>
 
 					               <div class="timeline-label">
-					                  <h2><a href="#">Technical Recovery Lead </a> <span>2019 - recently</span></h2>
+					                  <h2><a href="#">Technical Recovery Lead at Home Credit Indonesia</a> <span>2019 - recently</span></h2>
 					                  <p>- Coordination, Planning & Build support with Homecredit International Group for IT Operation projects.</p>
 														<p>- Build monitoring enhancement and system to easiness task of Engineer and Monitoring team.</p>
 														<p>- Bussiness Sales data analysis.</p>
