--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 					</div>
 					<div class="row">
 						<div class="col-md-12 animate-box" data-animate-effect="fadeInLeft">
-							<p>In my previous works project, mostly i use AngularJs and sometimes VueJs to creating Single Page Application (SPA) in the Frontend and using PHP for Backend. Related my experienced mostly works in telecomunication industry, many tools I develop about realtime traffic data , alerting system, purpose to monitoring for preventing anomaly in system. I made a integration web application , so every user can access easily with modern view. Besides that, I created web tools for daily Operations purpose to data inquiry like VAS product, CRM , and other data that needed from database.  </p>
+							<p>In Role Technical Recovery Lead in Homecredit indonesia, mostly i liase with related team local and international for planning , build and enhancement IT Operation Project, Handle critical Issues and find solution.In my previous works project, mostly i use AngularJs and sometimes VueJs to creating Single Page Application (SPA) in the Frontend and using PHP for Backend. Related my experienced mostly works in telecomunication industry, many tools I develop about realtime traffic data , alerting system, purpose to monitoring for preventing anomaly in system. I made a integration web application , so every user can access easily with modern view. Besides that, I created web tools for daily Operations purpose to data inquiry like VAS product, CRM , and other data that needed from database.  </p>
 						</div>
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
 							<div class="progress-wrap">
