--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
 			<div class="colorlib-footer">
 				<p><small>&copy; <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="icon-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
+Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="icon-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">CL</a>
 <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --> </span>
 				<ul>
 					<li><a href="#"><i class="icon-facebook2"></i></a></li>
@@ -186,7 +186,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 					</div>
 					<div class="row">
 						<div class="col-md-12 animate-box" data-animate-effect="fadeInLeft">
-							<p>In Role Technical Recovery Lead in Homecredit indonesia, mostly i liase with related team local and international for planning , build and enhancement IT Operation Project, Handle critical Issues and find solution.In my previous works project, mostly i use AngularJs and sometimes VueJs to creating Single Page Application (SPA) in the Frontend and using PHP for Backend. Related my experienced mostly works in telecomunication industry, many tools I develop about realtime traffic data , alerting system, purpose to monitoring for preventing anomaly in system. I made a integration web application , so every user can access easily with modern view. Besides that, I created web tools for daily Operations purpose to data inquiry like VAS product, CRM , and other data that needed from database.  </p>
+							<p>In Role Technical Recovery Lead in Homecredit Indonesia, mostly i liaise with related team local and international for planning , build and enhancement IT Operation Project, Handle critical Issues and find solution and.In my previous works project, mostly i use AngularJs and sometimes VueJs to creating Single Page Application (SPA) in the Frontend and using PHP for Backend. Related my experienced mostly works in telecomunication industry, many tools I develop about realtime traffic data , alerting system, purpose to monitoring for preventing anomaly in system. I made a integration web application , so every user can access easily with modern view. Besides that, I created web tools for daily Operations purpose to data inquiry like VAS product, CRM , and other data that needed from database.  </p>
 						</div>
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
 							<div class="progress-wrap">
@@ -386,7 +386,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 														<p>- Build monitoring enhancement and system to easiness task of Engineer and Monitoring team.</p>
 														<p>- Bussiness Sales data analysis.</p>
 														<p>- Support Manager report and analysis to Management.</p>
-							       							<p>- Liase with related team to find incident solution.</p>
+							       							<p>- Liaise with related team to find incident solution.</p>
 							      							 <p>- Manage, Improvement, Sharing session for Engineer.</p>
 							      							 <p>- Service management development.</p>
 					               </div>
